# reocli

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.codex/skills/codex-reviewer/: SKILL.md
.github/workflows/: ci.yml  release.yml
.plan/: 01_foundation.md  02_auth_token.md  03_ability.md  04_device_time_channel.md  05_snap.md  06_ptz.md  07_test_ci_docs.md  2026-02-26_ptz-absolute-calibration.md  README.md
.plan/archive/2026-02-26_cgi-ptz-implementation/: README.md
.serena/: project.yml
.serena/memories/: done_checklist.md  project_overview.md  style_and_conventions.md  suggested_commands.md
docs/: ptz-absolute-control-spec.md  reolink-cgi.md
scripts/ptz/: re_eval_random.sh
src/: lib.rs
src/app/: mod.rs  preflight.rs
src/app/usecases/: get_ability.rs  get_channel_status.rs  get_dev_info.rs  get_ptz_status.rs  get_time.rs  get_user_auth.rs  mod.rs  net_port.rs  ptz_calibrate_auto.rs  ptz_controller.rs  ptz_deadband.rs  ptz_get_absolute.rs  ptz_get_absolute_raw.rs  ptz_move.rs  ptz_preset_goto.rs  ptz_preset_list.rs  ptz_pulse_lut.rs  ptz_set_absolute.rs  (+6 more)
src/core/: command.rs  error.rs  mod.rs  model.rs
src/interfaces/: mod.rs  runtime.rs
src/reolink/: auth.rs  client.rs  device.rs  media.rs  mod.rs  network.rs  onvif.rs  ptz.rs  system.rs
tests/: auth_integration.rs  cli_smoke.rs  client_auth_fallback.rs  client_http.rs  device_time_channel_integration.rs  live_smoke.rs  mcp_smoke.rs  onvif_ptz_integration.rs  ptz_absolute_integration.rs  ptz_calibration_integration.rs  ptz_control_integration.rs  ptz_status_integration.rs  snap_integration.rs
(+16 files in other folders)
