[package]
name = "reocli"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[lib]
path = "src/lib.rs"

[[bin]]
name = "reocli"
path = "src/bin/reocli.rs"

[[bin]]
name = "reocli-mcp"
path = "src/bin/reocli-mcp.rs"

[dependencies]
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
base64 = "0.22.1"
sha1 = "0.10.6"
time = { version = "0.3.44", features = ["formatting"] }

[dev-dependencies]
mockito = "1.7.0"
